@@ -103,6 +103,7 @@ Date: 2024-08-09
     - Buffed the flow limits of accumulators to 750kW from 600kW.
     - Changed Assembler 2's to have 2 input pipes and 1 output.
     - Changed RNM packs to take nitrogen and chlorine.
+    - Nerfed the chances of getting the science mold back from 75% to 66%.
 
   Fixes:
     - Fixed some wood-related recipes not being in the same place.
